# kernel

./: .gitignore  Cargo.toml  Makefile  README.md  bochsrc  bootstrap.S  bootstrap.asm  grub.cfg  kernel.c  link.ld  multiboot.S  multiboot2.S  x86_64-unknown-none-gnu.json
asm/: Makefile
asm/src/: bootstrap.asm  long.asm  long2.asm  long_stub.asm  multiboot2.asm  short_boot.asm  util.asm
boot/: Cargo.toml  build.rs
boot/src/: boot_c.c  boot_c.rs  lib.rs
bootstrap/: Cargo.toml
bootstrap/src/: include.rs  lib.rs
constants/: Cargo.toml
constants/src/: error.rs  lib.rs  util.rs
cpu/: Cargo.toml
kernel/: Cargo.toml  Makefile
kernel/src/: TODO.org  c.rs  constants.rs  error.rs  include.rs  kernel.rs  logging.rs  multiboot.rs  serial.rs  vga.rs
kernel/src/cpu/: init.rs  interrupt.rs  mod.rs  stack.rs  syscall.rs  task.rs  task2.rs
kernel/src/cpu/init/: gdt.rs  idt.rs  mod.rs  tss.rs
kernel/src/memory/: mod.rs  reserve.rs  simple.rs
kernel_serialize/: Cargo.toml
kernel_serialize/src/: executable.rs  lib.rs
kernel_std/: Cargo.toml
kernel_std/src/: allocator.rs  include.rs  lib.rs  logging.rs  map.rs  module.rs
kernel_std/src/cpu/: gdt.rs  idt.rs  mod.rs  stack.rs  tss.rs
lib/: boot.ld  grub.cfg  headers.ld  high.ld  link.ld  stage1.ld  test
lib/log/: Cargo.toml
lib/log/src/: lib.rs
lib/paging/: Cargo.toml
lib/paging/src/: constants.rs  lib.rs  paging.rs
log/: Cargo.toml  Makefile
log/src/: include.rs  lib.rs  logger.rs  macros.rs  point.rs
log_abi/: Cargo.toml
log_abi/src/: include.rs  lib.rs  macros.rs
memory/: Cargo.toml
memory/src/: include.rs  lib.rs  reserve.rs  simple.rs
paging/: Cargo.toml  Makefile
paging/src/: allocator.rs  builder.rs  constants.rs  frame.rs  include.rs  layout.rs  lib.rs  map.rs  page.rs  segment.rs  table.rs
serial/: Cargo.toml
serial/src/: include.rs  lib.rs
src/: bootstrap.S  bootstrap.asm  constants.rs  error.rs  kernel.c  kernel.rs  lib.rs  logging.rs  long.asm  memory.rs  multiboot.S  multiboot.rs  multiboot2.S  multiboot2.asm
src/asm/: bootstrap.asm  long.asm  long_boot.asm
src/cpu/: init.rs  interrupt.rs  mod.rs  stack.rs  syscall.rs  task.rs
src/cpu/init/: gdt.rs  idt.rs  mod.rs  tss.rs
src/log/: mod.rs  vga.rs
src/memory/: mod.rs  paging.rs  reserve.rs  simple.rs
stage2/: Cargo.toml  Makefile
stage2/src/: main.rs
test/: Cargo.toml  test
test/src/: lib.rs  main.rs
user/: Cargo.toml  build.rs
user/src/: lib.rs  syscall.asm
