[package]
name = "kernel"
version = "0.0.0"
authors = ["Jerome Rasky <jerome@rasky.co>"]

[lib]
path = "src/kernel.rs"
crate-type = ["staticlib"]

[features]
default = ["log_any"]
log_any = []
log_critical = []
log_error = []
log_warn = []
log_info = []
log_debug = []
log_trace = []

[dependencies]
rlibc = "*"
spin = "*"
elfloader = "*"

[target]
custom_unwind_resume = {}
