[package]
name = "boot"
version = "0.1.0"
authors = ["Jerome Rasky <jyrome.112@gmail.com>"]
links = "boot_c"
build = "build.rs"

[lib]
crate-type = ["staticlib"]

[dependencies]
rlibc = "*"
elfloader = "*"
log = { path = "../log" }
kernel_std = { path = "../kernel_std" }
serial = { path = "../serial" }
constants = { path = "../constants" }
paging = { path = "../paging" }
memory = { path = "../memory" }

[build-dependencies]
gcc = "*"
