[package]
name = "boot"
version = "0.1.0"
authors = ["Jerome Rasky <jyrome.112@gmail.com>"]
links = "boot_c"
build = "build.rs"

[lib]
crate-type = ["staticlib"]

[dependencies]
rlibc = "*"
uuid = "*"
log = { path = "../log" }
kernel_std = { path = "../kernel_std", features = ["freestanding"] }
serial = { path = "../serial" }
constants = { path = "../constants" }
paging = { path = "../paging" }
memory = { path = "../memory" }
corepack = { version = "*", git = "https://github.com/jrasky/corepack" }
serde = { version = "*", git = "https://github.com/serde-rs/serde", default-features = false }
serde_macros = { version = "*", git = "https://github.com/serde-rs/serde" }

[build-dependencies]
gcc = "*"
