[package]
name = "boot"
version = "0.1.0"
authors = ["Jerome Rasky <jyrome.112@gmail.com>"]
links = "boot_c"
build = "build.rs"

[lib]
crate-type = ["staticlib"]

[dependencies]
rlibc = "*"
uuid = { git = "https://github.com/jrasky/uuid" }
log = { path = "../log" }
kernel_std = { path = "../kernel_std", features = ["freestanding"] }
serial = { path = "../serial" }
constants = { path = "../constants" }
paging = { path = "../paging" }
memory = { path = "../memory" }
corepack = { version = "*", git = "https://github.com/jrasky/corepack" }
serde = { version = "*", default-features = false }
serde_derive = "*"
byteorder = { version = "*", default-features = false }

[build-dependencies]
gcc = "*"
