[package]
name = "kernel"
version = "0.0.0"
authors = ["Jerome Rasky <jerome@rasky.co>"]

[lib]
path = "src/kernel.rs"
crate-type = ["staticlib"]

[dependencies]
rlibc = "*"
spin = "*"
elfloader = "*"
log = { path = "../log" }
paging = { path = "../paging" }
user = { path = "../user" }
constants = { path = "../constants" }
serial = { path = "../serial" }
memory = { path = "../memory" }

[target]
custom_unwind_resume = {}
