[package]
name = "kernel"
version = "0.0.0"
authors = ["Jerome Rasky <jerome@rasky.co>"]

[lib]
path = "src/kernel.rs"
crate-type = ["staticlib"]

[dependencies]
rlibc = "*"
spin = "*"
log = { version = "*", default-features = false, features = ["nightly"] }
paging = { path = "../paging" }
user = { path = "../user" }
constants = { path = "../constants" }
serial = { path = "../serial" }
memory = { path = "../memory" }
kernel_std = { path = "../kernel_std", features = ["freestanding"] }

[target]
custom_unwind_resume = {}
