[package]
name = "kernel_serialize"
version = "0.1.0"
authors = ["Jerome Rasky <jyrome.112@gmail.com>"]

[dependencies]
uuid = "*"
byteorder = { version = "*", deafult-features = false }
serde = { version = "*", git = "https://github.com/serde-rs/serde", default-features = false, features = ["collections"] }
serde_marcos = { version = "*", git = "https://github.com/serde-rs/serde" }
log = { path = "../log" }
constants = { path = "../constants" }
