[package]
name = "kernel_std"
version = "0.1.0"
authors = ["Jerome Rasky <jyrome.112@gmail.com>"]

[dependencies]
rlibc = "*"
log = { path = "../log" }
memory = { path = "../memory" }
serial = { path = "../serial" }
constants = { path = "../constants" }
serde = { version = "*", default-features = false, features = ["collections"] }
serde_derive = "*"
uuid = { git = "https://github.com/jrasky/uuid", features = ["serde"] }

[features]
default = []
freestanding = []
