[package]
name = "kernel_std"
version = "0.1.0"
authors = ["Jerome Rasky <jyrome.112@gmail.com>"]

[dependencies]
rlibc = "*"
log = { version = "*", default-features = false, features = ["nightly"]}
memory = { path = "../memory" }
serial = { path = "../serial" }
constants = { path = "../constants" }

[features]
default = []
freestanding = []
