[package]
name = "stage2"
version = "0.1.0"
authors = ["Jerome Rasky <jyrome.112@gmail.com>"]

[dependencies]
elfloader = "*"
log = { path = "../log" }
paging = { path = "../paging" }
constants = { path = "../constants" }
uuid = { version = "*", features = ["v4"] }
corepack = { git = "https://github.com/jrasky/corepack", features = ["std"] }
serde = { version = "*", git = "https://github.com/serde-rs/serde" }
serde_macros = { version = "*", git = "https://github.com/serde-rs/serde" }
