[package]
name = "stage2"
version = "0.1.0"
authors = ["Jerome Rasky <jyrome.112@gmail.com>"]

[dependencies]
elfloader = "*"
log = { path = "../log" }
paging = { path = "../paging" }
constants = { path = "../constants" }
kernel_std = { path = "../kernel_std" }
uuid = { git = "https://github.com/jrasky/uuid", features = ["v4", "serde"] }
corepack = { git = "https://github.com/jrasky/corepack", features = ["std"] }
serde = "*"
serde_derive = "*"
